--- a/login.css
+++ b/login.css
@@ -11,7 +11,7 @@ section {
     align-items: center;
     min-height: 100vh;
     width: 100%;
-    background: url('background.jpg')no-repeat;
+    background: url('/img/background.jpg')no-repeat;
     background-position: center;
     background-size: cover;
 }
